Full frame compositor: File Output node using EXR-Multilayer is broken #98475

Closed
opened 2022-05-29 02:38:32 +02:00 by Guido · 8 comments

System Information
Operating system: macOS-12.4-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 5700 XT OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.8.54

Blender Version
Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-05-27 18:22, hash: 712b0496c1

Short description of error
Saving EXR-Multilayer via compositor (File Output Node) creates non working EXR-Multilayer Files.
BUT saving the render result EXR-Multilayer via image editor 'save as...' it works.
Screen Shot 2022-05-29 at 2.13.56 am.jpg

The image from the 'File Output node' :
test0001.exr
and here the image saved from the image editor:
image-viewer-save.exr

Exact steps for others to reproduce the error
untitled.blend

  • Open .blend file
  • Make sure full frame compositor is enabled in experimental features

Render image

Look at saved EXR file - it does not look as it should (tiled compositing works correctly)

**System Information** Operating system: macOS-12.4-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 5700 XT OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.8.54 **Blender Version** Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-05-27 18:22, hash: `712b0496c1` **Short description of error** Saving EXR-Multilayer via compositor (File Output Node) creates non working EXR-Multilayer Files. BUT saving the render result EXR-Multilayer via image editor 'save as...' it works. ![Screen Shot 2022-05-29 at 2.13.56 am.jpg](https://archive.blender.org/developer/F13119407/Screen_Shot_2022-05-29_at_2.13.56_am.jpg) The image from the 'File Output node' : ![test0001.exr](https://archive.blender.org/developer/F13119412/test0001.exr) and here the image saved from the image editor: ![image-viewer-save.exr](https://archive.blender.org/developer/F13119414/image-viewer-save.exr) **Exact steps for others to reproduce the error** [untitled.blend](https://archive.blender.org/developer/F13119405/untitled.blend) - Open .blend file - Make sure full frame compositor is enabled in experimental features # Render image Look at saved EXR file - it does not look as it should (tiled compositing works correctly)
Author

Added subscriber: @Nurb2Kea

Added subscriber: @Nurb2Kea

Added subscribers: @mano-wii, @iss

Added subscribers: @mano-wii, @iss

Can't reproduce on Windows, tried older and latest build to be sure.

Can you check if this happens when you render with CPU? @mano-wii can you check on Mac?

Can't reproduce on Windows, tried older and latest build to be sure. Can you check if this happens when you render with CPU? @mano-wii can you check on Mac?
Author

Just Checked with version: 3.3.0 Alpha, branch: master, commit date: 2022-05-29 19:25, hash: 3c0d7152c8
and CPU with the same result.

Also no need to open the rendered exr files via a 3rd party app.
Just drag the exr file rendered and saved from the compositor via 'File output node' back into blender compositor and connect to the viewer node.
Each output is the same.

Just Checked with version: 3.3.0 Alpha, branch: master, commit date: 2022-05-29 19:25, hash: `3c0d7152c8` and CPU with the same result. Also no need to open the rendered exr files via a 3rd party app. Just drag the exr file rendered and saved from the compositor via 'File output node' back into blender compositor and connect to the viewer node. Each output is the same.
Author

I guess I found the cause of it.
When changing the execution mode to "Fullframe" (like in the image below) the resulting exr-file will have all output layers being the same image.
Screen Shot 2022-05-30 at 3.35.17 am.jpg

So I switched it to "Tiled" and every exr-file output layer is what it's supposed to be.
I couldn't find anything about "Fullframe" in the linked manual, what it does and what not...

I would consider this a bug !

I guess I found the cause of it. When changing the execution mode to "Fullframe" (like in the image below) the resulting exr-file will have all output layers being the same image. ![Screen Shot 2022-05-30 at 3.35.17 am.jpg](https://archive.blender.org/developer/F13121998/Screen_Shot_2022-05-30_at_3.35.17_am.jpg) So I switched it to "Tiled" and every exr-file output layer is what it's supposed to be. I couldn't find anything about "Fullframe" in the linked manual, what it does and what not... I would consider this a bug !

Thanks for checking, I can reproduce this with full frame feature enabled.

Thanks for checking, I can reproduce this with full frame feature enabled.
Richard Antalik changed title from File Output node using EXR-Multilayer in compositor is somehow broken ! (macOS) to Full frame compositor: File Output node using EXR-Multilayer is broken 2022-05-30 04:57:57 +02:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author

Maybe we get this fixed too in version 3.2.1 on wednesday !?

Maybe we get this fixed too in version 3.2.1 on wednesday !?
Philipp Oeser removed the
Interest
VFX & Video
label 2023-02-10 09:31:31 +01:00
Sergey Sharybin added
Type
Bug
and removed
Type
Report
labels 2023-02-16 11:54:45 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-05-11 21:01:55 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98475
No description provided.