Fix #98475: Full frame compositor: File Output node using EXR-Multilayer is broken

The same input (original image) was used for all layers. Now the operation correctly assigns the right input to the right output buffer.

Pull Request: https://projects.blender.org/blender/blender/pulls/107709